--- a/deploy/App.html
+++ b/deploy/App.html
@@ -9,7 +9,11 @@
         Rally.onReady(function() {
             var copyright_notice = "This software is provided as an example for demonstration of functionality only, " +
                     "without guarantee, support or warranty. (c) 2013 Rally Software";
-            function makeIsoDate(initial_date,record) {
+             function limitDecimals(initial_value) {
+                return parseInt( 10*initial_value, 10 ) / 10;
+             }
+             
+             function makeIsoDate(initial_date,record) {
                 //window.console && console.log( initial_date, typeof(initial_date));
                 if ( typeof(initial_date) === "string" ) {
                     return initial_date;
@@ -85,7 +89,7 @@
                     {name:'CumulativePointsAccepted',type:'float',defaultValue:0, convert:convertCumulativeAccepted},
                     {name:'CumulativeDeviation',type:'float',defaultValue:0,convert: convertCumulativeDeviation},
                     {name:'TemporalState',type:'string',defaultValue:'unknown',convert:setTemporalState},
-                    {name:'TrendPoint', type:'float',defaultValue: null }
+                    {name:'TrendPoint', type:'float',defaultValue: null, convert: limitDecimals }
                 ],
                 addScheduledItem: function(item) {
                     if ( item.PlanEstimate ) {
@@ -138,19 +142,44 @@
                 items: [{xtype:'container',itemId:'selector_box'},{xtype:'container',itemId:'chart_box'}],
                 selected_release: null,
                 items_in_release: [],
+                applied_state:null,
                 launch: function() {
                     this._addTimeboxSelector();
                 },
                 _addTimeboxSelector: function() {
+                    var me = this;
                     this.down('#selector_box').add({
                         xtype:'rallyreleasecombobox',
                         itemId:'release_box',
+                        stateId: 'pxs.burnup.release',
+                        stateful: true,
+                        stateEvents: ['change'],
+                        getState: function() {
+                            window.console && console.log( ".......saving state", this.getRawValue() );
+                            return { value: this.getRawValue() };
+                        },
+                        applyState: function(state) {
+                            window.console && console.log(".......applying state", state);
+                            if ( state && state.value ) {
+                                me.applied_state = state.value;
+                                //this.setRawValue(state.value);
+                            }
+                        },
                         listeners: {
                             change: function(rb,newValue,oldValue) {
                                 this.selected_release = rb.getRecord();
                                 this._getScopedReleases();
                             },
                             ready: function(rb) {
+                                window.console && console.log( ".......release ready", this.applied_state );
+                                // applyState (above) seems to work before the data is loaded
+                                if (this.applied_state) {
+                                    window.console && console.log(".......re-applying state", this.applied_state);
+                                    var same_release = rb.findRecordByDisplay(this.applied_state);
+                                    if ( same_release ) {
+                                        rb.setValue(same_release);
+                                    }
+                                }
                                 this.selected_release = rb.getRecord();
                                 this._getScopedReleases();
                             },
@@ -377,8 +406,8 @@
                         height: 400,
                         store: chart_store,
                         series: [
-                            {type:'line',dataIndex:'CumulativePointsPlanned',name:'User Stories',visible:true},
-                            {type:'line',dataIndex:'CumulativePointsAccepted',name:'Stories Accepted',visible:true},
+                            {type:'line',dataIndex:'CumulativePointsPlanned',name:'Points Planned',visible:true},
+                            {type:'line',dataIndex:'CumulativePointsAccepted',name:'Points Accepted',visible:true},
                             {type:'column',dataIndex:'CumulativeDeviation',name:'Gap from Required',visible: true},
                             {type:'line',dataIndex:'TrendPoint',name:'Trend',visible:true}],
                         chartConfig: {
@@ -411,10 +440,6 @@
                     var today = Rally.util.DateTime.toIsoString(new Date(),false).replace(/T.*$/,"");
                     for (var key in hash ) {
                         if (hash.hasOwnProperty(key)){
-            //                var snap = hash[key];
-            //                if ( key > today ) {
-            //                    snap.set('Future',true);
-            //                }
                             // not sure why the model can't be pushed straight into the store
                             the_array.push(hash[key].getData());
                         }
