fix issue where not enough sprints were downloaded

--- a/deploy/App.html
+++ b/deploy/App.html
@@ -137,7 +137,7 @@
             Ext.define('CustomApp', {
                 extend: 'Rally.app.App',
                 componentCls: 'app',
-                version: "0.3",
+                version: "0.5",
                 defaults: { margin: 5 },
                 show_teams: true,
                 items: [
@@ -150,6 +150,9 @@
                 applied_state:null,
                 launch: function() {
                     this._addTimeboxSelector();
+                },
+                _log: function(msg) {
+                    console.log( new Date(), msg );  
                 },
                 _addTimeboxSelector: function() {
                     var me = this;
@@ -215,10 +218,12 @@
                     Ext.create('Rally.data.WsapiDataStore',{
                         model: 'Iteration',
                         autoLoad: true,
+                        limit: 'Infinity',
                         sorters: [{ property: 'StartDate' } ],
                         fetch: ['Name','Project','StartDate','EndDate','ObjectID'],
                         listeners: {
                             load: function(store,data,success){
+                                me._log("Found " + data.length + " iterations");
                                 Ext.Array.each(data,function(item){
                                     me.team_names[item.get('Project').ObjectID] = item.get('Project').Name;
                                     me.team_data[item.get('Project').Name] = {};
@@ -264,7 +269,7 @@
                     });
                 },
                 _getItemsInRelease: function() {
-                    window.console && console.log("_getItemsInRelease");
+                    this._log("_getItemsInRelease");
                     var me = this;
                     this.item_store = Ext.create('Rally.data.WsapiDataStore',{
                         model: 'UserStory',
@@ -274,6 +279,7 @@
                         fetch:['PlanEstimate','ScheduleState','Iteration','Name','Project','ObjectID','EndDate','StartDate'],
                         listeners: {
                             load: function(store,data,success){
+                                me._log("Found " + data.length + " stories" );
                                 this.items_in_release = data;
                                 this._makeIterationSlices();
                             },
@@ -291,7 +297,7 @@
                     return date_array;
                 },
                 _makeIterationSlices: function() {
-                    window.console && console.log( "_makeIterationSlices");
+                    this._log( "_makeIterationSlices");
                     var me = this;
                     var data_hash = {}; // key will be name
                     for ( var name in this.iterations ) {
@@ -329,16 +335,16 @@
                                     data_hash[sprint].addScheduledItem(record.getData());
                                     me.team_data[project_name][sprint].addScheduledItem(record.getData());
                                 } else { 
-                                    window.console && console.log("WARNING: Iteration not defined",sprint);
+                                    me._log("WARNING: Iteration not defined",sprint);
                                 }
                             } else {
-                                window.console && console.log("WARNING: Item not in sprint", record );
+                                me._log("WARNING: Item not in any sprint", record );
                             }
                         });
                         data_hash = this._calculateCumulativeData(data_hash);
                         for ( var project_name in me.team_data ) {
                             if ( me.team_data.hasOwnProperty(project_name) ) {
-                                window.console && console.log("...",project_name);
+                                this._log("...",project_name);
                                 me.team_data[project_name] = this._calculateCumulativeData(me.team_data[project_name])
                             }
                         }
@@ -346,7 +352,7 @@
                     }
                 },
                 _calculateCumulativeData: function(data_hash) {
-                    window.console && console.log("_calculateCumulativeData",data_hash);
+                    this._log("_calculateCumulativeData",data_hash);
                     var total_points = 0;
                     var total_accepted = 0;
                     for ( var sprint in data_hash ) {
@@ -370,7 +376,7 @@
                 },
                 _setTrend: function(sprints,scope) {
                     // Use Linear Least Squares: it assumes x is good and error is concentrated in Y values
-                    window.console && console.log("_setTrend");
+                    this._log("_setTrend");
                     var me = this;
                     var velocity_array = [];
                     var x_array = [];
@@ -438,7 +444,7 @@
                     return sprints;
                 },
                 _showChart: function(data_hash){
-                    window.console && console.log("_showChart", data_hash, this.show_teams, this.team_data );
+                    this._log("_showChart", data_hash, this.show_teams, this.team_data );
                     if ( this.show_teams ) {
                         this._showSegregatedChart(data_hash);
                     } else {
@@ -446,7 +452,7 @@
                     }
                 },
                 _showSegregatedChart: function(data_hash) {
-                    window.console && console.log("_showSegregatedChart",data_hash,this.team_data);
+                    this._log("_showSegregatedChart",data_hash,this.team_data);
                     data_hash = this._normalizeTeamData(data_hash,this.team_data);
                     var scope = 100;
                     var data_array = this._hashToArray(data_hash);
@@ -551,7 +557,7 @@
                     return the_array;
                 },
                 _normalizeTeamData: function(data_hash,team_data) {
-                    window.console && console.log( "_normalizeTeamData",data_hash,team_data);
+                    this._log( "_normalizeTeamData",data_hash,team_data);
                     var me = this;
                     for ( var team_name in team_data ) {
                         if (team_data.hasOwnProperty(team_name)){
